2005-10-15  Bill Wohler  <wohler@newt.com>

	* message.el (message-tool-bar-map): Renamed image file from
	mail_send to mail/send.

2005-10-16  Masatake YAMATO  <jet@gyve.org>

	* message.el (message-expand-group): Pass the common
	prefix substring of completion to `display-completion-list'.

2005-10-09  Daniel Brockman <daniel@brockman.se>

	* format-spec.el (format-spec): Propagate text properties of % spec.

2005-01-21  Derek Atkins <warlord@MIT.EDU>  (tiny change)

	* pgg-pgp.el (pgg-pgp-decrypt-region): Use passphrase cache.

2005-10-08  Simon Josefsson  <jas@extundo.com>

	* pgg-parse.el (top-level): Don't require custom, it is
	autoloaded.  (To sync with No Gnus.)

2005-05-09  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el (pgg-gpg-possibly-cache-passphrase): Fix PIN caching,
	tiny patch from "Georg C. F. Greve" <greve@gnu.org>.

2005-10-08  Simon Josefsson  <jas@extundo.com>

	* pgg-def.el (top-level): Don't require custom, it is
	autoloaded.  (To sync with No Gnus.)

2005-10-04  David Hansen  <david.hansen@gmx.net>

	* nnrss.el (nnrss-request-article): Add support for the comments tag.
	(nnrss-check-group): Ditto.

2005-10-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-url.el (mm-url-predefined-programs): Add switches for curl.

	* gnus-util.el (gnus-remove-duplicates): Remove.

	* nnmail.el (nnmail-article-group): Use mm-delete-duplicates
	instead of gnus-remove-duplicates.

	* message.el (message-remove-duplicates): Remove.
	(message-idna-to-ascii-rhs-1): Use mm-delete-duplicates instead of
	message-remove-duplicates.

	* mm-util.el (mm-delete-duplicates): Use `delete-dups' if
	available, else use implementation from `delete-dups'.

2005-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* time-date.el: Autoload parse-time-string, XEmacs needs it.

2005-09-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-decode.el (mm-inline-media-tests): Check presence of the diff-mode
	function rather than the diff-mode.el package.